--- a/styles/index.css
+++ b/styles/index.css
@@ -1,49 +1,50 @@
 html, body{
   margin: 0;
-  padding: 0;
 }
 
 header{
-  width: 100%;
-  background-color: cyan;
-  height: 80px;
-  display: inline-grid;
-  grid-template-columns: 40% 20% 20% 20%;
   top: 0;
   position: absolute;
-}
 
-nav{
-  float: right;
-  float: top;
-  height: 100%;
-  background-color: cyan;
-  margin: 0;
+  width: 100%;
+  height: 80px;
+
   display: inline-grid;
-  grid-template-columns: 50% 50%
-}
+  grid-template-columns: 40% 20% 20% 20%;
 
-.nav-items{
-  margin: 0;
-  align-self: center;
+  background-color: cyan;
 }
 
 h1{
   margin: 0;
-  text-align: center;
+
   font-size: 40px;
+
+  text-align: center;
+  align-self: center;
+}
+
+nav{
+  display: inline-grid;
+  grid-template-columns: 50% 50%;
+
+  background-color: cyan;
+}
+
+.nav-items{
   align-self: center;
 }
 
 main{
-  margin-top: 120px;
+  margin-top: 140px;
 }
 
 h2{
-  text-align: center;
   margin-bottom: 0;
-  margin-top: 50px;
+
   font-size: 40px;
+
+  text-align: center;
 }
 
 .container{
@@ -52,21 +53,26 @@ h2{
 }
 
 .column{
+  margin: 0 5% 0 5%;
+
   width: 40%;
-  margin: 0 5%  0 5%;
 }
 
 .category {
+  margin: 80px auto;
+
   height: 250px;
-  background-color: red;
-  margin-top: 80px;
-  margin-bottom: 80px;
+
   display: flex;
   align-items: center;
+
   border-radius: 10px;
+
+  background-color: red;
 }
 
 .category-name{
   width: 100%;
+  
   text-align: center;
 }
